Removes OK endpoint. Modifies response from objects show endpoint.
closes #2534
